--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "uuid": "^9.0.1",
+    "@types/uuid": "^9.0.8"
   }
 }
