--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.8",
     "@uiw/react-markdown-preview": "^5.1.3",
     "@uiw/react-md-editor": "^4.0.4",
     "autoprefixer": "10.4.15",
@@ -61,6 +62,7 @@
     "next": "^14.2.16",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.47",
+    "puppeteer": "^21.0.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -73,9 +75,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
-    "vaul": "^0.9.9",
-    "zod": "^3.23.8",
     "uuid": "^9.0.1",
-    "@types/uuid": "^9.0.8"
+    "vaul": "^0.9.9",
+    "zod": "^3.23.8"
   }
 }
