--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ next-env.d.ts
 .env.development.local
 .env.test.local
 .env.production.local
+
+# cursor files
+.cursorignore
+.cursorrules
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
