changed back to puppeteer

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
         "maxDuration": 60
       }
     }
-  ]
+  ],
+  "functions": {
+    "app/api/link-preview/route.ts": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
+  }
 } 
